--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
@@ -36,8 +36,8 @@
     </ol>
 </div>
 <script type="text/ng-template" id="card-form.html">
-    <md-input-container>
+    <md-input-container class="md-icon-right">
         <textarea ng-model="slide.text">a</textarea>
+        <md-icon md-svg-icon="t:edit"></md-icon>
     </md-input-container>
-    <md-button>img</md-button>
 </script>
