--- a/Cloudents.Web/ClientApp/components/helpers/signup-banner/signup-banner.less
+++ b/Cloudents.Web/ClientApp/components/helpers/signup-banner/signup-banner.less
@@ -9,8 +9,11 @@
 
     @media (max-width: @screen-xs) {
         background-image: url(../img/banner-signup-mobile.jpg);
-        height: 505px;
         padding: 0px 6px;
+        height: ~"calc(100vh - 152px)";
+        &.has-smart-banner {
+            height: ~"calc(100vh - 236px)";
+        }
     }
 
     .back-button .sbf{        
@@ -56,19 +59,23 @@
     .buttons{
         margin-top: 26px;
         .sign-up,.learn-more{
-            height: 39px;
+            text-align: center;
+            padding: 6px 16px;
+            min-width: 104px;
             border-radius: 26.5px;
             outline: none;
-            width: 125px;
-            line-height: 0.39;
             letter-spacing: -0.5px;
+            display: inline-block;
             border: solid 1px @color-white;
         }
         .sign-up{
             background-color: @color-white;
             color: @color-main-purple;
-            width: 105px;
+            //width: 105px;
             margin-right: 9px;
+        }
+        .learn-more{
+            color: white;
         }
     }
     
