--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -10,24 +10,23 @@
     p{margin: 17px 19px 17px 17px;}
 
     .q-price{
-        height: 47px;
+        height: 41px;
+        width: 105px;
         overflow: hidden;
         border-radius: 0 0 36px;
         background-color: #f0f0f0;
         border: solid 0.5px #dddddd;
         border-top: 0;
         border-left: 0;
-        font-size: 22px;
-        font-weight: bold;
-        color: #000000;
+        font-size: 18px;
+                
+        color: #47586a;
         text-align: center;
-        padding-bottom: 7px;
-        padding-right: 16px;
-        padding-left: 12px;
+        padding-right: 15px;
         display: inline-block;
 
 
-        span{margin: 5px 0px 10px; display: block;}
+        span{ line-height: 40px; display: block;letter-spacing: -0.4px;}
     }
 
     .q-answer{
@@ -98,60 +97,58 @@
     .bottom-section .card-info{
         display: flex;    
         justify-content: space-between;        
-        padding: 7px 17px 9px;
+        padding: 0px 16px 15px 17px;
+        line-height: 32px;
         align-items: flex-end;
 
         .new-block{display: flex; align-items: flex-start;}
         .files{
-            width: 55px;
-            margin-right: 16px;
-            border-right: 1px solid @Dividers;
-            height: 25px;
+            width: 30px;
+            margin-right: 19px;
+            height: 32px;
             display: flex;
             flex-direction: row;
             
             .sbf-attach{ transform: rotate(260deg);
-                &::before{transform: scale(1, -1);font-size: 16px;color: @color-grey;}
+                &::before{transform: scale(1, -1);font-size: 12px;color: @color-grey;}
             }
             span{
                 color: @color-grey;
-                margin-left: 10px;
-                font-size: 20px;                
+                margin-left: 4px;
+                font-size: 16px;  
+                line-height: 1.69;
+                letter-spacing: -0.3px;              
             }
             
         }
         .users{
-            list-style-type: none;
-            li{
-                float: left;
-                margin-right: 5px;
-                width: 35px;
-                height: 38px;
-                position: relative;
-                .avatar{
-                    width: 32px;
-                    height: 32px;
-                }
-                .sbf-chat{
-                    text-align: center;
-                    position: absolute;
-                    right: 0;
-                    bottom: 0;
-                    font-size: 20px;
-                    color:@color-main-purple;
-                }
+            .avatar{
+                width: 32px;
+                height: 32px;
+                float: right;
+                margin-right: -7px;
+                border: 2px solid @color-white;
+                // border: 2px solid red;   /*test*/
+            }            
+        }
 
-            }
+        .user-counter{
+            font-size: 16px;
+            color: @color-grey;
+            line-height: 32px;
+            letter-spacing: -0.3px;
+            margin-left: 11px;
         }
 
         .answer{ 
-            display: flex;                
+            display: flex;        
+            line-height: 24px;        
             .answer-btn{            
                 border-radius: 4px;
                 background-color: #0455a8;
                 font-size: 14px;
                 color: @color-white;
-                padding: 3px 20px;              
+                padding: 0px 20px;              
             }
         }
 
